# Hentai-Downloader

./: .gitignore  README.md
Bash/: hentai.sh
Batch/: index.bat
C#/: Downloader.cs  Hentai.csproj  Program.cs  README.MD  jonj.csproj
C#HentaiDownloader/: Program.cs  README.MD  build.bat  c#.csproj  jonj.csproj
C++/: CMakeLists.txt  README.md  main.cpp
C++/downloader/: hentai.cpp  hentai.h
C++/libs/curl/: BUILD-HASHES.txt  BUILD-MANIFEST.txt
C++/libs/curl/dep/nghttp2/: ChangeLog.txt
C++/utils/: HTTP.cpp  HTTP.h  strutils.cpp  strutils.h
Clojure/: deps.edn  main.clj  readme.md
CoffeeScript/: main.coffee  package-lock.json
CoffeeScriptHentaiDownloader/: README.md  main.coffee  package.json
Dart/: main.dart
Elvish/: waifu.elv
Go/: README.md
GolangHentaiDownloader/: main.go
JScript/: alternative.js  hentai.js
Java/: dependency-reduced-pom.xml  pom.xml
JavaHentaiDownloader/: pom.xml
Julia/: README.md  amo.jl  hentai.jl
Kotlin/: HentaiDownloader.kt  readme.md
Nim/: alternative.nim  config.nims  main.nim  readme.md
NimHentaiDownloader/: alternative.nim  config.nims  main.nim
NodeJS/: index.js
Perl/: hentai.pl
Php/: alternative.php  hentai.php
Powershell/: alternative.ps1  hentai.ps1
Python/: README.md  alternative.py  main.py
PythonHentaiDownloader/: README.md  alternative.py  index.py  main.py
Ruby/: README.md  main.rb
RubyHentaiDownloader/: README.md  main.rb
Rust/: Cargo.toml
Rust/src/: main.rs
TypeScript/: README.md  index.ts
V/: Waifu.v
VBScript/: hentai.vbs
powershell-hentai-downloader/: hentai.ps1
(+15 files in other folders)
